--- a/privacidade.html
+++ b/privacidade.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" type="image/jpg" href="./assets/img/favicon.png">
 
     <!-- Título da Página -->
-    <title>Política de Privacidade | Milagre Zero Gordura/title>
+    <title>Política de Privacidade | Milagre Zero Gordura</title>
     
     <style type="text/css">
       body {
