--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Simples metódo que me fez perder 6 quilos em 20 dias e 17 quilos em apenas 3 messes</b></h3>
+            <h3 class="my-4"><b>Simples metódo que me fez perder 6 quilos em 20 dias e 17 quilos em apenas 3 meses</b></h3>
 
             <!-- VSL -->
             <script src="https://fast.wistia.com/embed/medias/i98cb1711w.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_i98cb1711w videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/i98cb1711w/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
